2015-08-05  Mike Frysinger  <vapier@gentoo.org>

	* nptl/allocatestack.c (allocate_stack): Move stacktop decl down to
	bottom and under _STACK_GROWS_DOWN.  Move the stacktop assignment
	in there too.

2015-08-05  Carlos O'Donell  <carlos@systemhalted.org>

	* version.h (RELEASE): Set to "development".
	(VERSION): Set to "2.22.90"

	* version.h (RELEASE): Set to "stable".
	(VERSION): Set to "2.22"
	* include/features.h (__GLIBC_MINOR__): Set to 22.

2015-08-04  Chris Metcalf  <cmetcalf@ezchip.com>

	* sysdeps/tile/tilepro/bits/atomic.h (__atomic_update):
	Restructure macro to avoid "value computed is not used" warning.
	(atomic_compare_and_exchange_val_acq): Likewise.

2015-08-04  Andreas Schwab  <schwab@suse.de>

	[BZ #18635]
	* sysdeps/unix/sysv/linux/i386/makecontext.S: Terminate FDE before
	ret.
	* sysdeps/i386/i686/Makefile (test-xfail-tst-makecontext): Remove.

2015-08-01  Carlos O'Donell  <carlos@redhat.com>

	* po/pl.po: Updated translation.
	* po/uk.po: Likewise.
	* po/fi.po: Likewise.
	* po/ko.po: Likewise.
	* po/ru.po: Likewise.
	* po/vi.po: Likewise.

2015-07-31  Zack Weinberg  <zackw@panix.com>

	[BZ #18681]
	* regexp.h: Add unconditional #warning stating that this header
	will be removed soon.  Revise banner comment to match.
	(compile): Consistently use ERROR instead of RETURN to report
	errors (partial fix for bz#18681).
	* regexp.c: Don't include regexp.h. Remove some unnecessary
	declarations.

2015-07-31  Carlos O'Donell  <carlos@redhat.com>

	* po/libc.pot: Regenerated.

2015-07-30  Andrew Senkevich  <andrew.senkevich@intel.com>

	[BZ #18740]
	* sysdeps/x86_64/fpu/Makefile (double-vlen2-arch-ext-cflags,
	float-vlen4-arch-ext-cflags): Removed.
	* math/Makefile (CFLAGS-test-double-vlen2-wrappers.c,
	CFLAGS-test-float-vlen4-wrappers.c): Likewise.

2015-07-30  Mike Frysinger  <vapier@gentoo.org>

	[BZ #14113]
	* sysdeps/hppa/nptl/bits/pthreadtypes.h (pthread_mutex_t): Change
	aligned to __aligned__.
	(pthread_cond_t, pthread_rwlock_t): Likewise.
